# Task-treaker-CLI

./: .gitignore  README.md  main.py  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ruff.yml
src/: __init__.py  commands.py  task_cli.py
src/taskcli/: commands.py  main.py  models.py  registry.py  storage.py  task_cli_functions.py
taskcli/: main.py  taskcli.py
taskcli/src/: commands.py  storage.py  task_cli_functions.py  task_types.py
