[project]
name = "taskcli"
version = "0.2.0"
description = "Task treaker CLI tool"
authors = [{ name = "Jaracomp"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.9",
    "tabulate>=0.9.0",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project.scripts]
taskcli = "taskcli.main:main"
