[project]
dynamic = ["version"]
name = "taskcli"
description = "Task treaker CLI tool"
authors = [{ name = "Jaracomp"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.9",
    "tabulate>=0.9.0",
]

[build-system]
requires = ["setuptools", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[project.scripts]
taskcli = "taskcli.main:main"

[tool.setuptools-git-versioning]
enabled = true
